# oxidized

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.gitea/workflows/: build.yaml  nightly.yaml
oxidized/: Cargo.toml  build.rs
oxidized/assets/models/: BasicWall.gltf  car.glb
oxidized/assets/shaders/: bloom.frag  light.frag  light.vert
oxidized/old_src/: main.rs
oxidized/resources/models/: Block_Woman.gltf  block_man.gltf  car.glb  floor.glb  simple_wall.gltf
oxidized/resources/shaders/: light.frag  light.vert
oxidized/src/: main.rs
oxidized/src/ecs/: components.rs  entity.rs  input.rs  mod.rs  util.rs  world.rs
raylib_oxidized/: Cargo.toml
raylib_oxidized/src/: camera3d.rs  colors.rs  consts.rs  lib.rs  light.rs  material.rs  model.rs  shader.rs  texture2d.rs  vector.rs  window.rs
src/: main.rs
tests/: integration_test.rs
